Replace get(0) with getFirst()
Signed-off-by: lisrte <laurent.issertial_externe@rte-france.com>